feat: Add Latest News Section

--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@
       </form>
 
       <!--Note: Discover Section  -->
-      <section class="px-6 py-14">
+      <section class="md:px-6 px-2 py-14">
         <h1 class="font-bold text-4xl pb-7">
           Discover the University of Liverpool
         </h1>
@@ -500,7 +500,7 @@
       </section>
 
       <!--Note: Fellowship  card  -->
-      <section class="px-6 mb-16">
+      <section class="md:px-6 px-2 mb-16">
         <div
           class="grid lg:grid-cols-2 grid-cols-1 lg:mt-8 bg-[#222a58] lg:p-0 p-6"
         >
@@ -532,7 +532,7 @@
       </section>
 
       <!--Note Our Ranking Section  -->
-      <section class="px-6 py-10 bg-[#f6f6f4]">
+      <section class="md:px-6 px-2 py-10 bg-[#f6f6f4]">
         <h2 class="text-4xl text-[#20292e] font-bold mb-4">
           Our rankings and reputation
         </h2>
@@ -639,7 +639,7 @@
           <div
             class="bg-[#222a58] text-white lg:px-14 lg:py-20 md:px-8 px-5 py-8 md:col-span-4 lg:order-first order-last"
           >
-            <h1 class="lg:text-3xl md:text-2xl text-xl font-bold pb-3">
+            <h1 class="lg:text-3xl text-2xl font-bold pb-3">
               Discover Liverpool in India
             </h1>
             <p class="md:text-lg text-base">
@@ -670,7 +670,7 @@
       </section>
 
       <!--Note: Our research Section  -->
-      <section class="pb-10 pt-3 px-6">
+      <section class="pb-10 pt-3 md:px-6 px-2">
         <h1 class="text-3xl font-bold pb-6 text-[#20292e]">
           Our research: Transforming lives, changing the worlds
         </h1>
@@ -779,7 +779,7 @@
         </div>
       </section>
 
-      <!-- Note: vibrant student life section -->
+      <!-- Note: vibrant student life Card -->
       <section class="lg:px-6">
         <div class="grid lg:grid-cols-6 grid-cols-1 mt-3 lg:mb-12">
           <div
@@ -794,7 +794,7 @@
           <div
             class="bg-[#f6f6f4] text-black lg:px-14 lg:py-14 md:px-8 px-5 py-8 md:col-span-4"
           >
-            <h1 class="lg:text-3xl md:text-2xl text-xl font-bold pb-3">
+            <h1 class="lg:text-3xl text-2xl font-bold pb-3">
               Discover a vibrant student life in Liverpool
             </h1>
             <p class="md:text-lg text-base">
@@ -823,6 +823,113 @@
           </div>
         </div>
       </section>
+
+      <!-- Note: Global Impact card  -->
+      <section class="lg:px-6">
+        <div class="grid lg:grid-cols-6 grid-cols-1 lg:mt-12 lg:mb-12">
+          <div
+            class="bg-[#222a58] text-white lg:px-14 lg:py-20 md:px-8 px-5 py-8 md:col-span-4 lg:order-first order-last"
+          >
+            <h1 class="lg:text-3xl text-3xl font-bold pb-3">
+              We're making an impact across the globe
+            </h1>
+            <p class="md:text-lg text-base">
+              We’re proud to be part of a global community, where collaboration
+              drives our success and impact across the world. Find out more
+              about our commitment to global engagement and how we’re making a
+              difference to the world.
+            </p>
+
+            <div class="flex md:flex-row flex-col flex-wrap gap-4 mt-8">
+              <a
+                href="#"
+                class="border px-6 py-3 text-lg hover:underline text-center"
+                >Explore our global partnerships</a
+              >
+              <a
+                href="#"
+                class="border px-6 py-3 text-lg hover:underline text-center"
+                >Work with us</a
+              >
+            </div>
+          </div>
+          <div
+            class="lg:h-full w-full md:h-[28rem] h-[19rem] md:col-span-2 overflow-hidden"
+          >
+            <img
+              src="./public/9d58dee3-d91e-4cf1-850f-81a3e527d1b0.webp"
+              alt="two students talking"
+              class="w-full h-full object-cover object-center"
+            />
+          </div>
+        </div>
+      </section>
+
+      <!--Note: Latest news Section  -->
+      <section class="md:px-6 px-2 py-10 bg-[#f6f6f4]">
+        <h2 class="text-4xl text-[#20292e] font-bold mb-4">Latest news</h2>
+        <div class="w-full grid sm:grid-cols-2 grid-cols-1 gap-5">
+          <div class="lg:p-10 p-7 bg-white w-full cursor-pointer">
+            <div
+              class="lg:h-[30rem] h-[24rem] lg:w-full mx-auto  overflow-hidden"
+            >
+              <img
+                src="./public/news-1.webp"
+                alt=""
+                class="w-full h-full object-cover object-center"
+              />
+            </div>
+            <div class="h-fit">
+              <p class="py-4 uppercase">24 October 2025</p>
+              <p class="text-[#222a58] text-xl font-bold pb-3 underline">
+                Chemistry PhD student create ai art for River of Light festival
+              </p>
+              <p class="text-base text-gray-600">
+                A University of Liverpool PhD student is bringing her expertise
+                in robotics and coding to this year’s River of Light festival.
+              </p>
+            </div>
+          </div>
+          <div class="w-full space-y-3">
+            <!--Note: reputation card 1 -->
+            <div class="w-full bg-white p-6 cursor-pointer md:pb-24">
+              <p class="text-lg uppercase pb-4">24 October 2025</p>
+              <p class="text-xl text-[#222a58] font-bold pb-3 underline">
+                Our teaching is rated Gold, the highest level, by the Teaching
+                Excellence Framework.
+              </p>
+            </div>
+            <!--Note: reputation card 2 -->
+            <div class="w-full bg-white p-6 cursor-pointer md:pb-24">
+              <p class="text-lg uppercase pb-4">22 October 2025</p>
+              <p class="text-xl text-[#222a58] font-bold pb-3 underline">
+                University of Liverpool Research Fellowships open for
+                applications for 2025-2026
+              </p>
+            </div>
+            <!--Note: reputation card 3 -->
+            <div class="w-full bg-white p-6 cursor-pointer md:pb-24">
+              <p class="text-lg uppercase pb-4">17 October 2025</p>
+              <p class="text-xl text-[#222a58] font-bold pb-3 underline">
+                Heseltine Institute Annual Lecture celebrates significance of
+                football for Liverpool and its future
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <div class="mt-10">
+          <a
+            href="#"
+            class="border px-6 py-3 text-lg hover:underline text-center"
+            >Read more news
+          </a>
+        </div>
+      </section>
     </main>
   </body>
 </html>
+
+<!-- 
+
+
