feat: Add Latest Events Section

--- a/index.html
+++ b/index.html
@@ -926,10 +926,68 @@
           </a>
         </div>
       </section>
+
+       <!--Note: Latest Events Section  -->
+       <section class="md:px-6 px-2 py-10 bg-[#dbdbd2]">
+        <h2 class="text-4xl text-[#20292e] font-bold mb-4">Latest Events</h2>
+        <div class="w-full grid sm:grid-cols-2 grid-cols-1 gap-5 ">
+          <div class="lg:p-10 p-7 bg-white w-full cursor-pointer">
+            <div
+              class="lg:h-[30rem] h-[24rem] lg:w-full mx-auto  overflow-hidden"
+            >
+              <img
+                src="./public/news-1.webp"
+                alt=""
+                class="w-full h-full object-cover object-center"
+              />
+            </div>
+            <div class="h-fit">
+              <p class="uppercase w-fit px-2 py-1 bg-[#f6f6f4] mt-3 text-sm">Lecture</p>
+              <p class="py-4 uppercase">03 November 2025</p>
+              <p class="text-[#222a58] text-xl font-bold pb-3 underline">
+                Should we let scientists follow their noses? How curiosity-driven research advances medicine and health
+              </p>
+             
+            </div>
+          </div>
+          <div class="w-full space-y-3">
+            <!--Note: reputation card 1 -->
+            <div class="w-full bg-white p-6 cursor-pointer md:pb-52">
+              <p class="uppercase w-fit px-2 py-1 bg-[#f6f6f4] mb-3 text-sm">Lecture</p>
+              <p class="text-lg uppercase pb-4">13 November 2025</p>
+              <p class="text-xl text-[#222a58] font-bold pb-3 underline">
+                2025 Seamus Heaney Lecture - Sir Simon Schama
+              </p>
+            </div>
+            <!--Note: reputation card 2 -->
+            <div class="w-full bg-white  p-6 cursor-pointer md:pb-52">
+              <p class="uppercase w-fit px-2 py-1 bg-[#f6f6f4] mb-3 text-sm">Lecture</p>
+              <p class="text-lg uppercase pb-4">13 November 2025</p>
+              <p class="text-xl text-[#222a58] font-bold pb-3 underline">
+                John Hamilton Lifelong Learning Lecture with Dr Shabna Begum
+              </p>
+            </div>
+          
+          </div>
+        </div>
+
+        <div class="mt-10 w-full">
+          <a
+            href="#"
+            class="border px-6 py-3 text-lg hover:underline text-center w-full"
+            >Read more events
+          </a>
+        </div>
+      </section>
     </main>
   </body>
 </html>
 
 <!-- 
+
+
+
+
+
 
 
