feat: Add logo in white

--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <header
       class="grid-rows-2 absolute w-full px-5 py-2 z-50 text-white bg-opacity-90"
     >
-      <!-- primary navagation  -->
+      <!--Note: primary navagation  -->
       <nav class="w-full flex justify-between items-center">
-        <div class="md:w-48 md:h-20 w-36 h-16 bg-ed-500 overflow-hidden">
+        <div class="md:w-48 md:h-24 w-36 h-16 bg-ed-500 overflow-hidden">
           <img
-            src="/public/logo.svg"
+            src="./public/logo-white.png"
             alt="Logo"
             class="w-full h-full object-contain object-center"
           />
@@ -238,7 +238,7 @@
     </header>
 
     <main>
-      <!-- Hero section -->
+      <!--Note: Hero section -->
       <section
         class="relative md:pt-[20rem] pt-[26rem] md:pb-[5rem] pb-[3rem] px-6"
       >
@@ -871,7 +871,7 @@
         <div class="w-full grid sm:grid-cols-2 grid-cols-1 gap-5">
           <div class="lg:p-10 p-7 bg-white w-full cursor-pointer">
             <div
-              class="lg:h-[30rem] h-[24rem] lg:w-full mx-auto  overflow-hidden"
+              class="lg:h-[30rem] h-[24rem] lg:w-full mx-auto overflow-hidden"
             >
               <img
                 src="./public/news-1.webp"
@@ -927,13 +927,13 @@
         </div>
       </section>
 
-       <!--Note: Latest Events Section  -->
-       <section class="md:px-6 px-2 py-10 bg-[#dbdbd2]">
+      <!--Note: Latest Events Section  -->
+      <section class="md:px-6 px-2 py-10 bg-[#dbdbd2]">
         <h2 class="text-4xl text-[#20292e] font-bold mb-4">Latest Events</h2>
-        <div class="w-full grid sm:grid-cols-2 grid-cols-1 gap-5 ">
+        <div class="w-full grid sm:grid-cols-2 grid-cols-1 gap-5">
           <div class="lg:p-10 p-7 bg-white w-full cursor-pointer">
             <div
-              class="lg:h-[30rem] h-[24rem] lg:w-full mx-auto  overflow-hidden"
+              class="lg:h-[30rem] h-[24rem] lg:w-full mx-auto overflow-hidden"
             >
               <img
                 src="./public/news-1.webp"
@@ -942,32 +942,37 @@
               />
             </div>
             <div class="h-fit">
-              <p class="uppercase w-fit px-2 py-1 bg-[#f6f6f4] mt-3 text-sm">Lecture</p>
+              <p class="uppercase w-fit px-2 py-1 bg-[#f6f6f4] mt-3 text-sm">
+                Lecture
+              </p>
               <p class="py-4 uppercase">03 November 2025</p>
               <p class="text-[#222a58] text-xl font-bold pb-3 underline">
-                Should we let scientists follow their noses? How curiosity-driven research advances medicine and health
+                Should we let scientists follow their noses? How
+                curiosity-driven research advances medicine and health
               </p>
-             
             </div>
           </div>
           <div class="w-full space-y-3">
             <!--Note: reputation card 1 -->
             <div class="w-full bg-white p-6 cursor-pointer md:pb-52">
-              <p class="uppercase w-fit px-2 py-1 bg-[#f6f6f4] mb-3 text-sm">Lecture</p>
+              <p class="uppercase w-fit px-2 py-1 bg-[#f6f6f4] mb-3 text-sm">
+                Lecture
+              </p>
               <p class="text-lg uppercase pb-4">13 November 2025</p>
               <p class="text-xl text-[#222a58] font-bold pb-3 underline">
                 2025 Seamus Heaney Lecture - Sir Simon Schama
               </p>
             </div>
             <!--Note: reputation card 2 -->
-            <div class="w-full bg-white  p-6 cursor-pointer md:pb-52">
-              <p class="uppercase w-fit px-2 py-1 bg-[#f6f6f4] mb-3 text-sm">Lecture</p>
+            <div class="w-full bg-white p-6 cursor-pointer md:pb-52">
+              <p class="uppercase w-fit px-2 py-1 bg-[#f6f6f4] mb-3 text-sm">
+                Lecture
+              </p>
               <p class="text-lg uppercase pb-4">13 November 2025</p>
               <p class="text-xl text-[#222a58] font-bold pb-3 underline">
                 John Hamilton Lifelong Learning Lecture with Dr Shabna Begum
               </p>
             </div>
-          
           </div>
         </div>
 
@@ -982,12 +987,3 @@
     </main>
   </body>
 </html>
-
-<!-- 
-
-
-
-
-
-
-
