--- a/index.html
+++ b/index.html
@@ -985,5 +985,196 @@
         </div>
       </section>
     </main>
+
+    <!-- footer section  -->
+    <footer class="bg-[#1E242A] text-white px-8 py-10">
+      <div
+        class="max-w-7xl mx-auto grid grid-cols-1 md:grid-cols-5 gap-10 border-b border-gray-700 pb-10"
+      >
+        <div class="flex flex-col gap-4">
+          <img src="./public/logo-white.png" alt="Logo" class="w-72" />
+        </div>
+
+        <div>
+          <h3 class="font-semibold mb-3">Information for</h3>
+          <ul class="flex flex-col gap-2 text-gray-300">
+            <li><a href="#" class="underline">Current students</a></li>
+            <li><a href="#" class="underline">Current staff</a></li>
+            <li><a href="#" class="underline">Prospective students</a></li>
+            <li><a href="#" class="underline">Businesses and partners</a></li>
+            <li><a href="#" class="underline">Researchers</a></li>
+            <li><a href="#" class="underline">Media</a></li>
+          </ul>
+        </div>
+
+        <div>
+          <h3 class="font-semibold mb-3">Study at Liverpool</h3>
+          <ul class="flex flex-col gap-2 text-gray-300">
+            <li><a href="#" class="underline">Undergraduate</a></li>
+            <li><a href="#" class="underline">Postgraduate taught</a></li>
+            <li><a href="#" class="underline">Postgraduate research</a></li>
+            <li><a href="#" class="underline">Online courses</a></li>
+            <li><a href="#" class="underline">CPD</a></li>
+            <li><a href="#" class="underline">Continuing education</a></li>
+            <li><a href="#" class="underline">International students</a></li>
+          </ul>
+        </div>
+
+        <div>
+          <h3 class="font-semibold mb-3">Quick links</h3>
+          <ul class="flex flex-col gap-2 text-gray-300">
+            <li><a href="#" class="underline">Jobs at Liverpool</a></li>
+            <li><a href="#" class="underline">Library</a></li>
+            <li><a href="#" class="underline">Sport at Liverpool</a></li>
+            <li><a href="#" class="underline">Find a researcher</a></li>
+            <li><a href="#" class="underline">Alumni</a></li>
+            <li>
+              <a href="#" class="underline">Our departments and faculties</a>
+            </li>
+            <li><a href="#" class="underline">All subjects</a></li>
+          </ul>
+        </div>
+
+        <div>
+          <h3 class="font-semibold mb-3">Contact us</h3>
+          <p class="text-gray-300 text-sm">
+            University of Liverpool<br />
+            Foundation Building<br />
+            Brownlow Hill<br />
+            Liverpool<br />
+            L69 7ZX
+          </p>
+          <p class="mt-3 text-sm text-gray-300">+44 (0) 151 794 2000</p>
+          <ul class="flex flex-col gap-2 text-gray-300 mt-3">
+            <li><a href="#" class="underline">Contact us</a></li>
+            <li><a href="#" class="underline">Maps and directions</a></li>
+            <li><a href="#" class="underline">Visit us</a></li>
+          </ul>
+        </div>
+      </div>
+
+      <div
+        class="max-w-7xl mx-auto flex flex-wrap justify-between items-center py-5 border-b border-gray-700"
+      >
+        <div class="flex items-center gap-2 text-gray-400 text-sm">
+          <span>Part of</span>
+          <img
+            src="./assets/images/34bf4ece-933a-4f53-bd5d-bfea11c687f2.svg"
+            alt="Russell image"
+            class="invert w-20"
+          />
+        </div>
+        <div class="flex items-center gap-4 text-gray-400">
+          <a href="#" class="hover:text-white">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              viewBox="0 0 24 24"
+              width="24"
+              height="24"
+              class="main-grid-item-icon"
+              fill="none"
+              stroke="currentColor"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              stroke-width="2"
+            >
+              <path
+                d="M18 2h-3a5 5 0 0 0-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 0 1 1-1h3z"
+              />
+            </svg>
+          </a>
+          <a href="#" class="hover:text-white">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              viewBox="0 0 24 24"
+              width="24"
+              height="24"
+              class="main-grid-item-icon"
+              fill="none"
+              stroke="currentColor"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              stroke-width="2"
+            >
+              <rect height="20" rx="5" ry="5" width="20" x="2" y="2" />
+              <path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z" />
+              <line x1="17.5" x2="17.51" y1="6.5" y2="6.5" />
+            </svg>
+          </a>
+          <a href="#" class="hover:text-white">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              viewBox="0 0 24 24"
+              width="24"
+              height="24"
+              class="main-grid-item-icon"
+              fill="none"
+              stroke="currentColor"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              stroke-width="2"
+            >
+              <path
+                d="M22.54 6.42a2.78 2.78 0 0 0-1.94-2C18.88 4 12 4 12 4s-6.88 0-8.6.46a2.78 2.78 0 0 0-1.94 2A29 29 0 0 0 1 11.75a29 29 0 0 0 .46 5.33A2.78 2.78 0 0 0 3.4 19c1.72.46 8.6.46 8.6.46s6.88 0 8.6-.46a2.78 2.78 0 0 0 1.94-2 29 29 0 0 0 .46-5.25 29 29 0 0 0-.46-5.33z"
+              />
+              <polygon points="9.75 15.02 15.5 11.75 9.75 8.48 9.75 15.02" />
+            </svg>
+          </a>
+          <a href="#" class="hover:text-white">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              viewBox="0 0 24 24"
+              width="24"
+              height="24"
+              class="main-grid-item-icon"
+              fill="none"
+              stroke="currentColor"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              stroke-width="2"
+            >
+              <path
+                d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z"
+              />
+              <rect height="12" width="4" x="2" y="9" />
+              <circle cx="4" cy="4" r="2" />
+            </svg>
+          </a>
+          <a href="#" class="hover:text-white">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              viewBox="0 0 24 24"
+              width="24"
+              height="24"
+              class="main-grid-item-icon"
+              fill="none"
+              stroke="currentColor"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              stroke-width="2"
+            >
+              <path
+                d="M23 3a10.9 10.9 0 0 1-3.14 1.53 4.48 4.48 0 0 0-7.86 3v1A10.66 10.66 0 0 1 3 4s-4 9 5 13a11.64 11.64 0 0 1-7 2c9 5 20 0 20-11.5a4.5 4.5 0 0 0-.08-.83A7.72 7.72 0 0 0 23 3z"
+              />
+            </svg>
+          </a>
+        </div>
+      </div>
+
+      <div
+        class="max-w-7xl mx-auto flex flex-wrap justify-center md:justify-between items-center text-gray-400 text-sm mt-4 gap-2"
+      >
+        <div class="flex flex-wrap gap-3 justify-center">
+          <a href="#" class="underline">Accessibility</a>
+          <a href="#" class="underline">Freedom of information</a>
+          <a href="#" class="underline">Cookie information</a>
+          <a href="#" class="underline">Data Protection</a>
+          <a href="#" class="underline">Modern slavery statement</a>
+          <a href="#" class="underline">Terms and Conditions</a>
+          <a href="#" class="underline">Charitable status</a>
+        </div>
+        <p>Â© University of Liverpool</p>
+      </div>
+    </footer>
   </body>
 </html>
